--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 click==6.7
+dominate==2.3.1
 Flask==0.12.2
+Flask-Bootstrap4==4.0.2
+gunicorn==19.8.1
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 pkg-resources==0.0.0
+visitor==0.1.3
 Werkzeug==0.14.1
