--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
+beautifulsoup4==4.6.0
+certifi==2018.4.16
+chardet==3.0.4
 click==6.7
 dominate==2.3.1
 Flask==0.12.2
 Flask-Bootstrap4==4.0.2
 gunicorn==19.8.1
+idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+pkg-resources==0.0.0
+psycopg2==2.7.4
+requests==2.18.4
 visitor==0.1.3
 Werkzeug==0.14.1
